deployment/production/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arcadia-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "arcadia-static"
spec:
  backend:
    serviceName: client-api-service
    servicePort: 3000
  rules:
    - host: client-api.stage.arcadiagaming.io
      http:
        paths:
          - backend:
              serviceName: client-api-service
              servicePort: 3000
    - host: stage-bo-api.arcadiagaming.io
      http:
        paths:
          - backend:
              serviceName: backoffice-api-service
              servicePort: 3000
    - host: stage-bo.arcadiagaming.io
      http:
        paths:
          - backend:
              serviceName: backoffice-fe-service
              servicePort: 8077
    - host: stage-socketio.arcadiagaming.io
      http:
        paths:
          - backend:
              serviceName: client-socketio-node-service
              servicePort: 3001
    - host: stage.arcadiagaming.io
      http:
        paths:
          - path: /api/v1/robots/login
            backend:
              serviceName: game-core-api-service
              servicePort: 3000
          - path: /*
            backend:
              serviceName: client-fe-service
              servicePort: 8079
